--- a/style.css
+++ b/style.css
@@ -997,8 +997,9 @@ footer{
 .works .coding .portfolio{
     background: url(./images/portfolio.png);
 }
+
 .works .coding .school{
-    background: url(./images/school-management.jpg);
+    background: url(./images/restaurant.jpg);
 }
 
 .works .coding .simple-life,
