--- a/style.css
+++ b/style.css
@@ -989,9 +989,8 @@ footer{
 
 /* orther styles  */
 
-
 .works .coding .simple-life{
-    background: url(./images/simplelife.jpg);
+    background: url(./images/simple-life.png);
 }
 
 .works .coding .portfolio{
