--- a/style.css
+++ b/style.css
@@ -362,8 +362,10 @@ footer{
     display: block;
     width: fit-content;
     margin: 0 10px;
-    background-color: #bbb;
-    color: blue;
+   
+    color: #2929b5;
+    background-color: #b9b9b9c4;
+    
     padding: 5px 15px;
     border-radius: 40em;
 }
