--- a/style.css
+++ b/style.css
@@ -606,12 +606,12 @@ footer{
 
 .about a{
     display: block;
-    background-color: #bbb;
     text-align: center;
     padding: 10px 0;
     border-radius: 40em;
     margin: 5px auto;
-    color: blue;
+    color: #2929b5;
+    background-color: #b9b9b9c4;
 }
 
 .about a:hover{
@@ -791,7 +791,7 @@ footer{
     display: block;
     padding: 0;
     width: 120px;
-    color: blue;
+    color: #2929b5;
     text-align: center;
 }
 
@@ -1013,8 +1013,8 @@ footer{
 }
 
 .works a{
-    background-color: #bbb;
-    color: blue;
+    color: #2929b5;
+    background-color: #b9b9b9c4;
     display: block;
     width: 50%;
     text-align: center;
