--- a/style.css
+++ b/style.css
@@ -37,35 +37,26 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 80px;
+    height: 70px;
+    padding-top: 10px;
     background-color: var(--top-bg);
 }
 
 /* .main-header, */
 section{
     max-width: 960px;
-    width: 100%;
+    /* width: 60%; */
     margin: 0 auto;
     margin-bottom: 50px;
+    /* background-color: #0f0c27; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.main-header .main-nav{
-    width: 100%;
-    margin: 0 auto;
-}
 
 
-@media screen and (min-width:1200px){
-    .main-header .main-nav{
-        width: 70%;
-        margin: 0 auto;
-    }
-
-}
-
-header,
-section,
-footer{
+body{
     min-width: 320px;
 }
 
@@ -74,11 +65,11 @@ footer{
 /* responsive design will be from */
 
 
-
 .main-header .main-nav{
     height: 100%;
-    align-items: center;
+    width: 100%;
     display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 
@@ -125,7 +116,7 @@ footer{
 
 .main-header .main-nav  .menu-bars{
     right: 15px;
-    top: 37px;
+    top: 25px;
 }
 
 .main-header .main-nav  .menu-bars::before{
@@ -199,7 +190,7 @@ footer{
 
     .menu:checked ~ .main-ul {
     display: block;
-    margin-top: 80px;
+    margin-top: 60px;
     position: absolute;
     top: 0;
     left: 0;
@@ -237,7 +228,6 @@ footer{
 }
 
 
-
 /* links in the nav */
 .main-header .main-nav .main-ul li a{
     display: block;
@@ -255,7 +245,6 @@ footer{
 }
 
 .main-header .main-nav .main-ul li a:hover{
-/*     color: var(--hover); */
     color: #2929b5;
 }
 
@@ -269,6 +258,7 @@ footer{
     display: grid;
     grid-template-columns: .4fr .7fr 1fr;
     margin-top: 20px;   
+    /* background-color: #033a80; */
 }
 
 .home .social-media-icons{
@@ -335,12 +325,13 @@ footer{
     margin-bottom: 20px;
 }   
 
-
 .home .home-image{
     order: 3;
     display: flex;
     justify-content: center;
+    margin-top: 55px;
 } 
+
 .home .home-image img{
     width: 85%;
 }
@@ -450,17 +441,6 @@ footer{
     
 }
 
-/* .home-personal-content .home-links a{
-    padding: 8px 10px;
-    display: block;
-} */
-
-
- 
-
-
-
-
 
 
 /* home section ends here */
@@ -504,6 +484,7 @@ footer{
     width: 400px;
     margin: 15px 0;
 }
+
 
 .about .about-me .personal-info{
     order: 1;
@@ -1159,7 +1140,7 @@ footer .logo .ceo{
 }
 
 
-section{
+/* section{
     width: 100%;
-}
+} */
 
