--- a/style.css
+++ b/style.css
@@ -479,7 +479,7 @@ body{
 .about .about-me .introduction,
 .about .about-me .skills{
     width: 400px;
-    margin: 15px 0;
+    margin: 15px 20px;
 }
 
 
