--- a/style.css
+++ b/style.css
@@ -541,6 +541,20 @@ body{
     list-style: none;
 }
 
+.info .test{
+    display: flex;
+}
+
+.info li a{
+    display: block;
+    border-radius: 0;
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    color: black;
+}
+
+
 
 
 .about p{
