--- a/style.css
+++ b/style.css
@@ -203,7 +203,9 @@ body{
     transition: transform 0.3s ease-in-out;
     transform: translateY(0);
     }
+}
 
+    @media screen and (max-width:749px){
     .cv_for_mobile,
     .hire-me {
     display: block;
