--- a/style.css
+++ b/style.css
@@ -1149,6 +1149,8 @@ textarea:focus{
 /* footer starts here */
 
 footer{
+    max-width: 960px;
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
