--- a/styles/style.css
+++ b/styles/style.css
@@ -188,15 +188,15 @@ header input {
   top: 0;
 }
 
-header .download {
+.link-container .download {
   display: flex;
   width: 120%;
-  justify-content: space-around;
+  justify-content: space-evenly;
   margin-top: 20px;
   
 }
 
-header .download .cvs {
+.link-container .download .cvs {
   background-color: var(--main-color);
   padding: 10px 0;
   width: 100px;
