added new project

--- a/styles/style.css
+++ b/styles/style.css
@@ -969,7 +969,7 @@ section {
 }
 
 .works .coding .school {
-  background: url(../images/rest.jpg);
+  background: url(../images/zedchynaplug.PNG);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
