--- a/styles/style.css
+++ b/styles/style.css
@@ -951,7 +951,6 @@ section {
   border-top-width: 0;
   padding: 15px 0;
   margin: 0 auto;
-  border-radius: 12px;
   color: #717171;
   box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.75);
 }
@@ -995,6 +994,13 @@ section {
 
 .works .coding .clinic {
   background: url(../images/clinic.PNG);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.works .coding .church {
+  background: url(../images/church.PNG);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
