--- a/styles/style.css
+++ b/styles/style.css
@@ -100,6 +100,7 @@ header .tittle {
   padding: 10px 0px;
   text-transform: uppercase;
   color: #717171;
+  font-size: .9rem !important;
 }
 
 header input:checked ~ .link-container {
@@ -238,7 +239,7 @@ header nav ul li a {
   padding: 10px 0;
   width: 100px;
   text-align: center;
-  border-radius: 12px;
+  /* border-radius: 12px; */
 }
 
 .link-container .downloads span a{
@@ -390,7 +391,7 @@ section {
   color: #2929b5;
   background-color: #b9b9b9c4;
   padding: 5px 15px;
-  border-radius: 40em;
+  /* border-radius: 40em; */
 }
 
 .home-personal-content .home-links a#last {
@@ -621,7 +622,7 @@ section {
   display: block;
   /* text-align: center; */
   padding: 10px 0;
-  border-radius: 40em;
+  /* border-radius: 40em; */
   margin: 5px auto;
   color: #2929b5;
   background-color: #b9b9b9c4;
@@ -655,7 +656,7 @@ section {
 
 .about .skills .fa-brands{
   display: flex;
-  font-size: 2rem;
+  font-size: 1.95rem;
   width: 100%;
 }
 
@@ -736,9 +737,10 @@ section {
   border-bottom: 2px solid #bbb;
   border-top-width: 0;
   padding: 15px 0;
-  border-radius: 12px;
+  /* border-radius: 12px; */
   color: #717171;
   box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.75);
+  gap: 10px;
   
 }
 
@@ -751,7 +753,7 @@ section {
 .services a {
   display: block;
   color: var(--main-color);
-  border-radius: 12px;
+  /* border-radius: 12px; */
   background-color: #b9b9b9c4;
 }
 
@@ -841,7 +843,8 @@ section {
   border-bottom: 2px solid #bbb;
   border-top-width: 0;
   padding: 5px 20px;
-  border-radius: 12px;
+  /* border-radius: 12px; */
+  gap: 10px;
   color: #717171;
   box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.75);
 }
@@ -1022,7 +1025,7 @@ section {
   display: block;
   width: 50%;
   text-align: center;
-  border-radius: 12px;
+  /* border-radius: 12px; */
 }
 
 .works a:hover {
@@ -1106,7 +1109,7 @@ section {
   margin-bottom: 20px;
   padding: 5px 20px;
   font-size: var(--p-font);
-  border-radius: 12px;
+  /* border-radius: 12px; */
 }
 
 .contact .form .message {
@@ -1115,7 +1118,7 @@ section {
   padding: 5px 20px;
   border-width: 0;
   background-color: #bbbbbb84;
-  border-radius: 12px;
+  /* border-radius: 12px; */
   width: 100%;
 }
 .contact .form button {
@@ -1124,7 +1127,7 @@ section {
   padding: 3px 20px;
   margin: 0 auto;
   border-width: 0;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   background-color: var(--main-color);
   font-size: var(--main-color);
   color: #fff;
@@ -1138,7 +1141,7 @@ section {
 input:focus,
 textarea:focus {
   outline: 2px solid #033a80;
-  border-radius: 12px;
+  /* border-radius: 12px; */
 }
 
 .tittle h1 p {
@@ -1249,6 +1252,7 @@ body {
   visibility: hidden;
   /* display: none; */
 }
+
 .dark-mode input:checked + label {
   background: #242424;
 }
