--- a/fierotechsclinic/css/style.css
+++ b/fierotechsclinic/css/style.css
@@ -16,6 +16,9 @@ body {
   scroll-behavior: smooth;
 }
 
+body {
+  font-family: Prompt, sans-serif !important;
+}
 
 
 /* most used styles */
@@ -420,7 +423,9 @@ header .nav_container ul a#first {
 }
 
 /* home */
-
+.home .wrapper_home {
+  height: fit-content;
+}
 @media all and (min-height: 300px) {
   .home .wrapper_home {
     height: 100dvh;
@@ -432,7 +437,6 @@ section.home {
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
-  height: 100dvh !important;
 }
 
 section .wrapper_home {
