--- a/prices/style.css
+++ b/prices/style.css
@@ -331,3 +331,13 @@ textarea {
     z-index: 1000;
 
 }
+
+
+.note {
+    background-color: #f8d7da;
+    border: 1px solid #f5c6cb;
+    border-radius: .25rem;
+    color: #721c24;
+    padding: 1rem;
+    margin-top: 1rem;
+}
