--- a/prices/style.css
+++ b/prices/style.css
@@ -104,9 +104,9 @@ body {
 
 
 .zed_sotories_holder {
-    max-width: 1100px;
-    margin: 0 auto;
-    width: 100%;
+    max-width: 1100px !important;
+    margin: 0 auto !important;
+    width: 100% !important;
 }
 
 
